--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dist": "parcel src/index.html -d public"
+    "dist": "parcel src/index.html -d public",
+    "deploy" : "gh-pages -d public"
   },
   "repository": {
     "type": "git",
@@ -16,11 +17,12 @@
   "bugs": {
     "url": "https://github.com/reedzaman/TyperTyper/issues"
   },
-  "homepage": "https://github.com/reedzaman/TyperTyper#readme",
+  "homepage": "https://reedzaman.github.io/TyperTyper",
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "jquery": "^3.6.0"
   }
 }
