--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dist": "parcel src/index.html --public-url ./ -d public",
+    "dist": "parcel build src/index.html --public-url ./ -d public",
     "deploy" : "gh-pages -d public"
   },
   "repository": {
